[package]
name = "parse"
version = "0.1.0"
authors = ["Elias Lawson-Fox <me@eliaslfox.com>"]
repository = "https://github.com/eliaslfox/rust-http"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
derive_more = "0.99.11"
nom = { version = "7.0.0", features = [], default-features = false }
punycode = "0.4.1"
unic = "0.9.0"
unic-idna-mapping = "0.9.0"
unicode-joining-type = "0.5.0"
unicode-script = "0.5.4"

[dev-dependencies]
assert_no_alloc = "1.1.2"
url = "2.2.1"
